manifests/pxbbq/overlays/prod-demo/mongodb-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: pxbbq
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
  volumeClaimTemplates:
  - metadata:
      name: mongo-data-dir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: longhorn
