manifests/pxbbq/overlays/prod-demo/pxbbq-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pxbbq-svc
  namespace: pxbbq
spec:
  type: ClusterIP
