manifests/pxbbq/overlays/prod-demo/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      acme.cert-manager.io/http01-edit-in-place: "true"
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    name: pxbbq-ingress
    namespace: pxbbq
  spec:
    rules:
    - host: www.pxbbq.com
      http:
        paths:
        - backend:
            service:
              name: pxbbq-svc
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - www.pxbbq.com
      secretName: www-pxbbq-tls
kind: List
metadata:
  resourceVersion: ""
