manifests/pxbbq/overlays/prod-demo/networkPolicy-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: untitled-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongo
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: pxbbq-web
      ports:
        - port: 27017
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
