manifests/pxbbq/overlays/prod-demo/networkPolicy-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pxbbq-web-policy
  namespace: pxbbq
spec:
  podSelector:
    matchLabels:
      app: pxbbq-web
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 80
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - port: 80
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              pxbbq: allow
      ports:
        - port: 80
          protocol: TCP
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mongo
      ports:
        - port: 27017
